testing build script

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ and my research is detailed <a href="/coop.html" title="Cooperation for fun and 
 <p>If I do create anything interesting, I'll put it in the projects section. I am
 particularly proud of <a href="http://gatlin.tumblr.com/post/4951170925/eternity" title="Eternity">this piece</a>, though it's not software.</p>
 
-<p>If you want to drop me a line, email me at <a href="&#109;&#x61;&#105;&#x6C;t&#x6F;:&#114;&#111;&#107;e&#x6E;&#114;&#x6F;l&#64;&#x67;&#109;a&#x69;&#108;&#x2E;&#99;&#111;&#x6D;">&#114;&#111;&#107;e&#x6E;&#114;&#x6F;l&#64;&#x67;&#109;a&#x69;&#108;&#x2E;&#99;&#111;&#x6D;</a>. Do me a solid
+<p>If you want to drop me a line, email me at <a href="&#x6D;&#x61;&#105;&#x6C;&#116;&#x6F;:&#114;o&#x6B;&#101;&#x6E;&#x72;&#x6F;l&#64;&#103;&#109;&#x61;&#x69;&#108;&#x2E;&#99;&#111;&#x6D;">&#114;o&#x6B;&#101;&#x6E;&#x72;&#x6F;l&#64;&#103;&#109;&#x61;&#x69;&#108;&#x2E;&#99;&#111;&#x6D;</a>. Do me a solid
 and don't spam me, please.</p>
 
 <p>This site was written with <a href="/static/mksite.pl.txt">this script</a> because while I
