--- a/coop.html
+++ b/coop.html
@@ -73,7 +73,7 @@ model to empower the disenfranchised and poor because <em>expansion only lowers
 rent</em>.</p>
 
 <p>Hopefully this guide will be useful for you. If you have any questions,
-comments, or concerns, please send me a letter at <a href="&#x6D;&#x61;&#105;&#x6C;&#x74;&#111;:r&#x6F;&#x6B;&#x65;&#x6E;&#114;&#x6F;&#108;&#43;&#99;&#x6F;o&#x70;&#64;&#103;&#109;&#x61;&#105;&#x6C;&#x2E;&#99;&#111;&#x6D;">r&#x6F;&#x6B;&#x65;&#x6E;&#114;&#x6F;&#108;&#43;&#99;&#x6F;o&#x70;&#64;&#103;&#109;&#x61;&#105;&#x6C;&#x2E;&#99;&#111;&#x6D;</a>.</p>
+comments, or concerns, please send me a letter at <a href="&#109;&#x61;&#x69;&#108;&#116;&#x6F;:&#x72;&#x6F;k&#101;&#110;&#x72;&#x6F;&#x6C;&#x2B;&#99;&#111;&#111;p&#64;&#103;&#x6D;a&#x69;l&#x2E;&#99;&#111;&#109;">&#x72;&#x6F;k&#101;&#110;&#x72;&#x6F;&#x6C;&#x2B;&#99;&#111;&#111;p&#64;&#103;&#x6D;a&#x69;l&#x2E;&#99;&#111;&#109;</a>.</p>
 
 <h2>What is a co-op?</h2>
 
@@ -429,7 +429,7 @@ of the board since you have to have it anyway.</p>
 <p>This document will have more to follow. As I learn more I will update it here.</p>
 
 <p>If you have any suggestions or comments send a message to
-<a href="&#x6D;a&#x69;&#108;&#116;&#x6F;:&#114;&#111;&#x6B;&#x65;&#110;&#x72;&#111;&#x6C;&#x2B;&#x63;&#x6F;&#111;&#x70;&#64;&#x67;&#109;&#x61;&#105;&#x6C;&#x2E;&#x63;&#x6F;&#109;">&#114;&#111;&#x6B;&#x65;&#110;&#x72;&#111;&#x6C;&#x2B;&#x63;&#x6F;&#111;&#x70;&#64;&#x67;&#109;&#x61;&#105;&#x6C;&#x2E;&#x63;&#x6F;&#109;</a>.</p>
+<a href="&#x6D;&#x61;&#x69;&#x6C;&#x74;&#x6F;:&#x72;&#111;&#x6B;&#101;&#110;&#x72;&#x6F;l&#x2B;co&#111;&#112;&#64;&#103;&#x6D;a&#105;&#x6C;.&#x63;o&#109;">&#x72;&#111;&#x6B;&#101;&#110;&#x72;&#x6F;l&#x2B;co&#111;&#112;&#64;&#103;&#x6D;a&#105;&#x6C;.&#x63;o&#109;</a>.</p>
 
 <p>Last updated: 18 Nov 2011.</p>
 
