--- a/hireme.html
+++ b/hireme.html
@@ -35,7 +35,7 @@ applications personally and professionally.</p>
 to help you streamline your business, fix some personal peeve, or make something
 that has never existed before.</p>
 
-<p>If you want a quirky Scotty to your Kirk, drop me a line at <a href="&#109;a&#x69;&#108;t&#x6F;:&#114;&#x6F;&#107;&#101;nr&#111;&#108;&#64;&#103;&#x6D;&#97;&#105;l&#46;&#99;&#x6F;&#109;">&#114;&#x6F;&#107;&#101;nr&#111;&#108;&#64;&#103;&#x6D;&#97;&#105;l&#46;&#99;&#x6F;&#109;</a>.</p>
+<p>If you want a quirky Scotty to your Kirk, drop me a line at <a href="&#x6D;&#x61;&#x69;&#x6C;&#x74;&#x6F;:&#114;&#x6F;&#107;&#101;&#110;&#x72;&#x6F;&#x6C;&#64;&#x67;&#109;&#97;&#x69;&#108;&#46;&#x63;&#x6F;&#x6D;">&#114;&#x6F;&#107;&#101;&#110;&#x72;&#x6F;&#x6C;&#64;&#x67;&#109;&#97;&#x69;&#108;&#46;&#x63;&#x6F;&#x6D;</a>.</p>
 
 <p>Hell, the content management system I'm using for this site was a little
 <a href="/static/mksite.pl.txt">15 minute script</a> I wrote. "If the women don't find you
