--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <ul class="nav nav-pills">
                         <li><a href="#summary">Summary</a></li>
                         <li><a href="#projects">Projects</a></li>
-                        <li><a href="#links">Links</a></li>
+                        <li><a href="#links">I care about...</a></li>
                     </ul>
                 </div>
             </header>
@@ -130,22 +130,23 @@
 
             <section id="links">
                 <div class="page-header">
-                    <h2>Links</h2>
-                    <p>Things I care about! I'm not completely dead inside.</p>
+                    <h2>Things I care about</h2>
+                    <p>I'm not completely dead inside.</p>
                 </div>
 
                 <div class="row">
-                    <div class="span12">
+                    <div class="span6">
                         <h3><a href="http://austinfreeskool.wordpress.com">Austin Free
                                 Skool!</a></h3>
                         <p>I volunteer with this organization. Free community education
                         by and for the community!</p>
+                    </div>
+                    <div class="span6">
 
                         <h3><a href="http://nasco.coop">NASCO</a></h3>
                         <p>Cooperation and cooperative living are great solutions to a
                         lot of problems. This website can tell you a lot more!</p>
 
-                        <h3><a href="
                     </div>
                 </div>
             </section>
