no more tweaking today

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <header class="jumbotron subhead" id="overview">
                 <div class="row">
                     <h1>Gatlin Johnson</h1>
-                    <p class="lead">Software Developer, pug fanatic</p>
+                    <p class="lead">software developer, pug fanatic</p>
                 </div>
                 <div class="subnav">
                     <ul class="nav nav-pills">
@@ -151,9 +151,9 @@
                 </div>
             </section>
 
+            <footer class="footer">
+                <p class="pull-right"><a href="#">Back to top</a></p>
+            </footer>
         </div>
-        <footer class="footer">
-            <p class="pull-right"><a href="#">Back to top</a></p>
-        </footer>
     </body>
 </html>
