--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Gatlin Johnson</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+        <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
     </head>
     <body>
         <div class="container">
