--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <ul class="nav nav-pills">
                         <li><a href="#summary">Summary</a></li>
                         <li><a href="#projects">Projects</a></li>
-                        <li><a href="#links">I care about...</a></li>
+                        <li><a href="#links">Other Interests</a></li>
                     </ul>
                 </div>
             </header>
@@ -81,7 +81,9 @@
                         <h3>Hire me!</h3>
                         <p>I enjoy designing and making software. If you want
                         me to make some software, or want to work with me on
-                        something, drop me a line.</p>
+                        something, drop me a line. <a
+                            href="mailto:rokenrol@gmail.com">Drop me a
+                            line!</a></p>
                     </div>
                 </div>
             </section>
@@ -144,7 +146,7 @@
 
             <section id="links">
                 <div class="page-header">
-                    <h2>Things I care about</h2>
+                    <h2>Other Interests</h2>
                     <p>I'm not completely dead inside.</p>
                 </div>
 
@@ -161,6 +163,14 @@
                         <p>Cooperation and cooperative living are great solutions to a
                         lot of problems. This website can tell you a lot more!</p>
 
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="span6">
+                        <h3><a href="http://lacyrosemusic.com">Lacy Rose
+                                music</a></h3>
+                        <p>My friend Lacy Rose is a piano virtuoso and maker of
+                        ghost music. Have a listen; a dab'll do ya.</p>
                     </div>
                 </div>
             </section>
