about me section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <div class="subnav">
                     <ul class="nav nav-pills">
                         <li><a href="#summary">Summary</a></li>
+                        <li><a href="#about">Details</a></li>
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#links">Other Interests</a></li>
                     </ul>
@@ -88,6 +89,50 @@
                 </div>
             </section>
 
+            <section id="about">
+                <div class="page-header">
+                    <h2>Details, details</h2>
+                </div>
+
+                <div class="row">
+                    <div class="span12">
+                        <p>If you're an investor or employer, you should know
+                        I'm a brilliant, witty savant who is super driven to
+                        take over the world with you. Check out my LinkedIn up
+                        top!</p>
+
+                        <p>Everyone else: Hi! Welcome. I try to keep an open
+                        mind and I hate working on things that aren't
+                        interesting, or purely driven by money. I'm not going
+                        to help optimize spammy conversion pages, I'm not going
+                        to A/B test basic human greetings, etc. Really cool
+                        things come out of love, so you need to love what you
+                        do.</p>
+
+                        <p>In high school I did competitive literary criticsm.
+                        They actually gave me a letter jacket for my feats. I
+                        can't decide how cool this makes me.</p>
+
+                        <p>I was kind of bad at math in high school and only
+                        chose computer science because I had this notion that
+                        if I'm going to be paying (yes, I) for school by
+                        selling organs, I'd better get my money's worth. So I
+                        picked something I wasn't fantastic at.</p>
+
+                        <p>Fast forward. I've tried veganism, brewed kombucha,
+                        volunteered for festivals, learned to play Für Elise
+                        behind my head, been on the board of directors of two
+                        cooperative systems in Austin, and kissed a stingray.
+                        In my spare time I read math papers and teach on a
+                        volunteer basis. Turns out I wasn't bad at math; I was
+                        just uninspired. Seeing the world a bit, and in various
+                        states of mind, has been fantastic for realizing
+                        what's important.</p>
+
+                        <p>Which is why I'm not going to sit at a desk and scam
+                        people.</p>
+                    </div>
+                </div>
             <section id="projects">
                 <div class="page-header">
                     <h2>Projects</h2>
