linkedin linked in now

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <li><a
                                 href="http://gatlin.tumblr.com">tumblr</a></li>
                             <li><a
-                                href="www.linkedin.com/in/gatlinjohnson">LinkedIn</a></li>
+                                href="http://www.linkedin.com/in/gatlinjohnson">LinkedIn</a></li>
                             <li><a
                                 href="https://plus.google.com/109219461170636823247">+Gatlin
                                 Johnson</a></li>
