appeasing the UTF-8 gods

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         picked something I wasn't fantastic at.</p>
 
                         <p>Fast forward. I've tried veganism, brewed kombucha,
-                        volunteered for festivals, learned to play Für Elise
+                        volunteered for festivals, learned to play Fur Elise
                         behind my head, been on the board of directors of two
                         cooperative systems in Austin, and kissed a stingray.
                         In my spare time I read math papers and teach on a
