no more class warfare

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                         states of mind, has been fantastic for realizing
                         what's important.</p>
 
-                        <p>Which is why I'm not going to sit at a desk and scam
-                        people.</p>
+                        <p>So I'd prefer it if my work actually made someone
+                        happy.</p>
                     </div>
                 </div>
             <section id="projects">
