--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <div class="span6">
                         <h3><a href="http://lacyrosemusic.com">Lacy Rose
                                 music</a></h3>
-                        <p>My friend Lacy Rose is a piano virtuoso and maker of
+                        <p>My friend Lacy Rose is a pianist singer-songwriter and maker of
                         ghost music. Have a listen; a dab'll do ya.</p>
                     </div>
                 </div>
