--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
                 </div>
                 <div class="row">
                     <div class="span4">
-                        <h3><a href="https://gist.github.com/1755736">Haskell
-                                SAT solver</a></h3>
+                        <h3><a href="https://github.com/gatlin/surely">Surely</a></h3>
                         <p>A SAT solving algorithm written in Haskell. This was
                         my attempt at understanding DPLL. I'd like to extend
                         this with clause learning and backjumping, optimize the
