--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               , $nav = $('.subnav')
               , navHeight = $('.navbar').first().height()
               , navTop = $('.subnav').length && $('.subnav').offset().top - navHeight
-              , isFixed = 0G
+              , isFixed = 0
 
             processScroll()
 
@@ -247,7 +247,7 @@
                 isFixed = 0
                 $nav.removeClass('subnav-fixed')
               }
-          }
+            }
         </script>
     </body>
 </html>
