--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                     <div class="span6">
                         <h3><a href="http://lacyrosemusic.com">Lacy Rose
                                 music</a></h3>
-                        <p>My friend Lacy Rose is a pianist, singer, composer, and burgeoning composer and maker of
-                        ghost music. Have a listen; a dab'll do ya.</p>
+                        <p>My friend Lacy Rose is a pianist, singer, composer,
+                        and burgeoning composer of ghost music.</p>
                     </div>
                 </div>
             </section>
