--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <div class="span6">
                         <h3><a href="http://lacyrosemusic.com">Lacy Rose
                                 music</a></h3>
-                        <p>My friend Lacy Rose is a pianist, singer, composer,
+                        <p>My friend Lacy Rose is a pianist, singer,
                         and burgeoning composer of ghost music.</p>
                     </div>
                 </div>
