--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
                         <p class="lead">software developer, pug fanatic</p>
                     </div>
                 </div>
+                <div class="alert">
+                  <button type="button" class="close"
+                      data-dismiss="alert">×</button>
+                  <p>This is also the website for Rondan & Johnson. Send me an
+                  email if you have any business-related inquiries!</p>
+                </div>
+
                 <div class="subnav">
                     <ul class="nav nav-pills">
                         <li><a href="#summary">Summary</a></li>
