unicode fuckup with my alert closer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="alert">
                   <button type="button" class="close"
-                      data-dismiss="alert">×</button>
+                      data-dismiss="alert">x</button>
                   <p>This is also the website for Rondan & Johnson. Send me an
                   email if you have any business-related inquiries!</p>
                 </div>
