moved the projects around; ampersand fix

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="alert">
                   <button type="button" class="close"
                       data-dismiss="alert">x</button>
-                  <p>This is also the website for Rondan & Johnson. Send me an
+                  <p>This is also the website for Rondan &amp; Johnson. Send me an
                   email if you have any business-related inquiries!</p>
                 </div>
 
@@ -148,15 +148,6 @@
 
                 <div class="row">
                     <div class="span4">
-                        <h3><a href="https://github.com/alpmestan/hnn">HNN</a></h3>
-                        <p>The Haskell Neural Network library. Under
-                        construction! The goal is to produce the fastest neural
-                        net library this side of the Mississippi. In
-                        particular we will place focus on parallelization.</p>
-                        </p>
-                    </div>
-
-                    <div class="span4">
                         <h3><a
                                 href="https://github.com/gatlin/Saturn">Saturn</a></h3>
                         <p>A concurrent network SAT solver written in Go.
@@ -172,6 +163,18 @@
                         based on work from UT Austin, implemented in Go.
                         Deceptively simple but potentially quite powerful.
                         Written to eventually be used in Saturn.</p>
+                    </div>
+
+                    <div class="span4">
+                        <h3><a
+                                href="https://github.com/gatlin/cartograder">CartoCritic</a></h3>
+                        <p>This is a tool created for Texas A&amp;M Corpus
+                        Christi for use in the GIS / geospatial engineering
+                        classes. It allows students to submit maps for
+                        anonymous peer review and grade each other. It's not
+                        quite complete - I'm not sure yet how I want
+                        authentication to work - but it's handy
+                        nonetheless.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -192,6 +195,17 @@
                         programming support. It's a blunt instrument but it's
                         useful.</p>
                     </div>
+
+                    <div class="span4">
+                        <h3><a href="https://github.com/alpmestan/hnn">HNN</a></h3>
+                        <p><em>Under major construction!</em></p>
+                        <p>The Haskell Neural Network library. Under
+                        construction! The goal is to produce the fastest neural
+                        net library this side of the Mississippi. In
+                        particular we will place focus on parallelization.</p>
+                        </p>
+                    </div>
+
                 </div>
             </section>
 
