less hippie: linked in profile blurb for the about me

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>Gatlin Johnson</title>
             <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
             <!--[if lt IE 9]>
-              <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+              <script
+                  src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
             <![endif]-->
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/docs.css" rel="stylesheet">
@@ -15,7 +16,8 @@
         <div class="navbar navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <a class="btn btn-navbar" data-toggle="collapse"
+                        data-target=".nav-collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -49,7 +51,8 @@
                 <div class="alert">
                   <button type="button" class="close"
                       data-dismiss="alert">x</button>
-                  <p>This is also the website for Rondan &amp; Johnson. Send me an
+                  <p>This is also the website for Rondan &amp; Johnson. Send me
+                  an
                   email if you have any business-related inquiries!</p>
                 </div>
 
@@ -103,41 +106,37 @@
 
                 <div class="row">
                     <div class="span12">
-                        <p>If you're an investor or employer, you should know
-                        I'm a brilliant, witty savant who is super driven to
-                        take over the world with you. Check out my LinkedIn up
-                        top!</p>
+                        My professional experience begins in the summers of 2004
+                        and 2005 at Lost Pines Scout Reservation as a swimming
+                        and canoeing instructor. To this day nothing I have done
+                        has been more challenging or complicated than getting
+                        children to sit still and listen when they're outside in
+                        the sunshine.
 
-                        <p>Everyone else: Hi! Welcome. I try to keep an open
-                        mind and I hate working on things that aren't
-                        interesting, or purely driven by money. I'm not going
-                        to help optimize spammy conversion pages, I'm not going
-                        to A/B test basic human greetings, etc. Really cool
-                        things come out of love, so you need to love what you
-                        do.</p>
+                        I enjoy designing and reasoning about software. I have
+                        worked for HostGator.com
+                        as an internal developer, the Texas Department of
+                        Insurance, the occasional
+                        small business, and I take on contract work mostly in
+                        web development. I keep up
+                        to date with tools, ideas, and techniques and try to
+                        have a diverse palette to
+                        draw from when solving a problem.
 
-                        <p>In high school I did competitive literary criticsm.
-                        They actually gave me a letter jacket for my feats. I
-                        can't decide how cool this makes me.</p>
+                        Larry Wall is correct: the hallmarks of a good
+                        programmer are laziness,
+                        impatience, and hubris. My goal is to exemplify all
+                        three.
 
-                        <p>I was kind of bad at math in high school and only
-                        chose computer science because I had this notion that
-                        if I'm going to be paying (yes, I) for school by
-                        selling organs, I'd better get my money's worth. So I
-                        picked something I wasn't fantastic at.</p>
-
-                        <p>Fast forward. I've tried veganism, brewed kombucha,
-                        volunteered for festivals, learned to play Fur Elise
-                        behind my head, been on the board of directors of two
-                        cooperative systems in Austin, and kissed a stingray.
-                        In my spare time I read math papers and teach on a
-                        volunteer basis. Turns out I wasn't bad at math; I was
-                        just uninspired. Seeing the world a bit, and in various
-                        states of mind, has been fantastic for realizing
-                        what's important.</p>
-
-                        <p>So I'd prefer it if my work actually made someone
-                        happy.</p>
+                        My goals are to solve meaningful problems that improve
+                        lives. I am not
+                        interested in money as an end. In particular I believe
+                        that logical inference
+                        can be used to improve interpersonal relationships,
+                        emergency logistics, and
+                        long-term strategic planning. Or, you know, to make
+                        robots do cool things. I
+                        like robots.:
                     </div>
                 </div>
             <section id="projects">
@@ -179,7 +178,8 @@
                 </div>
                 <div class="row">
                     <div class="span4">
-                        <h3><a href="https://github.com/gatlin/surely">Surely</a></h3>
+                        <h3><a
+                                href="https://github.com/gatlin/surely">Surely</a></h3>
                         <p>A SAT solving algorithm written in Haskell. This was
                         my attempt at understanding DPLL. I'd like to extend
                         this with clause learning and backjumping, optimize the
@@ -197,7 +197,8 @@
                     </div>
 
                     <div class="span4">
-                        <h3><a href="https://github.com/alpmestan/hnn">HNN</a></h3>
+                        <h3><a
+                                href="https://github.com/alpmestan/hnn">HNN</a></h3>
                         <p><em>Under major construction!</em></p>
                         <p>The Haskell Neural Network library. Under
                         construction! The goal is to produce the fastest neural
@@ -217,16 +218,21 @@
 
                 <div class="row">
                     <div class="span6">
-                        <h3><a href="http://austinfreeskool.wordpress.com">Austin Free
+                        <h3><a
+                                href="http://austinfreeskool.wordpress.com">Austin
+                                Free
                                 Skool!</a></h3>
-                        <p>I volunteer with this organization. Free community education
+                        <p>I volunteer with this organization. Free community
+                        education
                         by and for the community!</p>
                     </div>
                     <div class="span6">
 
                         <h3><a href="http://nasco.coop">NASCO</a></h3>
-                        <p>Cooperation and cooperative living are great solutions to a
-                        lot of problems. This website can tell you a lot more!</p>
+                        <p>Cooperation and cooperative living are great
+                        solutions to a
+                        lot of problems. This website can tell you a lot
+                        more!</p>
 
                     </div>
                 </div>
@@ -252,7 +258,8 @@
             var $win = $(window)
               , $nav = $('.subnav')
               , navHeight = $('.navbar').first().height()
-              , navTop = $('.subnav').length && $('.subnav').offset().top - navHeight
+              , navTop = $('.subnav').length && $('.subnav').offset().top -
+              navHeight
               , isFixed = 0
 
             processScroll()
