--- a/index.html
+++ b/index.html
@@ -106,13 +106,16 @@
 
                 <div class="row">
                     <div class="span12">
+                        <p>
                         My professional experience begins in the summers of 2004
                         and 2005 at Lost Pines Scout Reservation as a swimming
                         and canoeing instructor. To this day nothing I have done
                         has been more challenging or complicated than getting
                         children to sit still and listen when they're outside in
                         the sunshine.
+                        </p>
 
+                        <p>
                         I enjoy designing and reasoning about software. I have
                         worked for HostGator.com
                         as an internal developer, the Texas Department of
@@ -122,12 +125,16 @@
                         to date with tools, ideas, and techniques and try to
                         have a diverse palette to
                         draw from when solving a problem.
+                        </p>
 
+                        <p>
                         Larry Wall is correct: the hallmarks of a good
                         programmer are laziness,
                         impatience, and hubris. My goal is to exemplify all
                         three.
+                        </p>
 
+                        <p>
                         My goals are to solve meaningful problems that improve
                         lives. I am not
                         interested in money as an end. In particular I believe
@@ -136,7 +143,8 @@
                         emergency logistics, and
                         long-term strategic planning. Or, you know, to make
                         robots do cool things. I
-                        like robots.:
+                        like robots.
+                        </p>
                     </div>
                 </div>
             <section id="projects">
