added vlad, removed pass, some formatting and rewording about the personal projects

--- a/index.html
+++ b/index.html
@@ -48,13 +48,6 @@
                         <p class="lead">software developer, pug fanatic</p>
                     </div>
                 </div>
-                <div class="alert">
-                  <button type="button" class="close"
-                      data-dismiss="alert">x</button>
-                  <p>This is also the website for Rondan &amp; Johnson. Send me
-                  an
-                  email if you have any business-related inquiries!</p>
-                </div>
 
                 <div class="subnav">
                     <ul class="nav nav-pills">
@@ -138,7 +131,7 @@
                         My goals are to solve meaningful problems that improve
                         lives. I am not
                         interested in money as an end. In particular I believe
-                        that logical inference
+                        that careful application of AI
                         can be used to improve interpersonal relationships,
                         emergency logistics, and
                         long-term strategic planning. Or, you know, to make
@@ -154,13 +147,25 @@
                 </div>
 
                 <div class="row">
+
+                    <div class="span4">
+                        <h3><a
+                                href="http://vladapp.com" target="_blank">
+                                Vlad</a></h3>
+                        <p>Vlad is an automatic work / labor scheduling system.
+                        It guarantees schedules which assign every job,
+                        maximize worker preferences, and which don't conflict
+                        with anyone's availability. It's in a pre-alpha stage
+                        &mdash; sign up for more details!</p>
+                    </div>
+
                     <div class="span4">
                         <h3><a
                                 href="https://github.com/gatlin/Saturn">Saturn</a></h3>
-                        <p>A concurrent network SAT solver written in Go.
-                        Pretty simple at the moment. Future plans involve
-                        parallelizing SAT instances to take advantage of all
-                        those pretty CPU cores you got there.</p>
+                        <p>A concurrent network SAT solver written in Go, based
+                        on MiniSAT. Pretty simple at the moment. Future plans
+                        involve parallelizing SAT instances to take advantage
+                        of all those pretty CPU cores you got there.</p>
                     </div>
 
                     <div class="span4">
@@ -169,8 +174,13 @@
                         <p>A distributed computing and concurrency calculus,
                         based on work from UT Austin, implemented in Go.
                         Deceptively simple but potentially quite powerful.
-                        Written to eventually be used in Saturn.</p>
+                        It was written while I was brainstorming
+                        parallelization techniques for Saturn.
+                        </p>
                     </div>
+
+                </div>
+                <div class="row">
 
                     <div class="span4">
                         <h3><a
@@ -183,8 +193,7 @@
                         authentication to work - but it's handy
                         nonetheless.</p>
                     </div>
-                </div>
-                <div class="row">
+
                     <div class="span4">
                         <h3><a
                                 href="https://github.com/gatlin/surely">Surely</a></h3>
@@ -193,15 +202,6 @@
                         this with clause learning and backjumping, optimize the
                         hell out of it, and put it on Hackage. Hacker News
                         liked it?</p>
-                    </div>
-
-                    <div class="span4">
-                        <h3><a
-                                href="https://github.com/gatlin/pass">pass</a></h3>
-                        <p>A Perl wrapper around the clingo answer set solver.
-                        Could be used in apps that want advanced logic
-                        programming support. It's a blunt instrument but it's
-                        useful.</p>
                     </div>
 
                     <div class="span4">
