more emphatic drop me a line

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         me to make some software, or want to work with me on
                         something, drop me a line. <a
                             href="mailto:rokenrol@gmail.com">Drop me a
-                            line!</a></p>
+                            line, I say!</a></p>
                     </div>
                 </div>
             </section>
