--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
             <section id="projects">
                 <div class="page-header">
                     <h2>Projects</h2>
-                    <p>Not everything, just the public domain stuff.</p>
+                    <p>Not everything, just the public domain stuff and my
+                    shameless plug for Vlad.</p>
                 </div>
 
                 <div class="row">
