--- a/dnamap/index.html
+++ b/dnamap/index.html
@@ -31,7 +31,7 @@
           </div>
         </div>
       </div>
-      <div class="container main-content">
+      <div class="container-fluid main-content">
         <div ng-view></div>
       </div>
       <div class="push"></div>
