--- a/dnamap/index.html
+++ b/dnamap/index.html
@@ -21,7 +21,7 @@
   </head>
   <body ng-controller="AppCtrl">
     <div class="wrapper">
-      <div class="navbar navbar-static-top">
+      <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
           <div class="container">
             <button data-toggle="collapse" data-target=".nav-collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="/" class="brand">DNA Map</a>
@@ -34,12 +34,6 @@
       <div class="container-fluid main-content">
         <div ng-view></div>
       </div>
-      <div class="push"></div>
     </div>
-    <footer class="footer">
-      <div class="container">
-        <p><small><a href="https://github.com/scotch/angular-brunch-seed">angular-brunch-seed | source</a></small></p>
-      </div>
-    </footer>
   </body>
 </html>
