--- a/dnamap/index.html
+++ b/dnamap/index.html
@@ -1,39 +1,360 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width" initial-scale="1.0">
+    <title>Ancestry By DNA</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title ng-bind-template="{{pageTitle}}"></title>
-    <link rel="stylesheet" href="/css/app.css"><!--[if lte IE 7]>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/json2/20110223/json2.js"></script><![endif]--><!--[if lte IE 8]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-    <script>
-      window.brunch = window.brunch || {};
-      window.brunch['auto-reload'] = {
-        enabled: true
-      };
-    </script>
-    <script src="/js/vendor.js"></script>
-    <script src="/js/app.js"></script>
+
+    <!-- Le styles -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <style>
+      body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+      .chart {
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -webkit-box-shadow: 0 1px 3px #666;
+    background: #ddd url(img/bg.png);
+    margin: 0 auto;
+    height: 500px;
+}
+p {
+    text-align: left;
+    margin: .5em 2em;
+}
+    </style>
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
+      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
+                    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
+                                   <link rel="shortcut icon" href="ico/favicon.png">
   </head>
-  <body ng-controller="AppCtrl">
-    <div class="wrapper">
-      <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-          <div class="container">
-            <button data-toggle="collapse" data-target=".nav-collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="/" class="brand">DNA Map</a>
-            <div class="nav-collapse">
-              <div ng-include="'/partials/nav.html'"></div>
-            </div>
-          </div>
+
+  <body>
+
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">DNA Map</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#map">Heatmap</a></li>
+              <li><a href="#breakdown">Breakdown</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
         </div>
       </div>
-      <div class="container-fluid main-content">
-        <div ng-view></div>
-      </div>
     </div>
+
+    <div class="container-fluid">
+
+        <div class="row-fluid" style="margin-top: 5px;">
+            <h1>Your genetic breakdown by region.</h1>
+        </div>
+        <div class="row-fluid">
+            <a name="map"></a>
+            <div class="span11">
+                <object data="img/worldMap.svg" type="image/svg+xml"
+                    style="width: 100%; height: 100%;"
+                    id="earth"></object>
+            </div>
+        </div>
+        <hr>
+        <div class="row-fluid">
+            <a name="breakdown"></a>
+            <h1>Breakdown</h1>
+            <div class="span6 offset3">
+                <div class="chart" id="pie">
+                </div>
+            </div>
+        </div>
+        <div class="push"></div>
+
+    </div> <!-- /container -->
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/raphael.js"></script>
+    <script src="js/g.raphael.js"></script>
+    <script src="js/g.pie.js"></script>
+    <script src="js/g.bar.js"></script>
+    <script type="text/javascript">
+        var a = document.getElementById("earth");
+        var africa = [
+            "ZA",
+            "NG",
+            "EG",
+            "algeria",
+            "AO",
+            "MA",
+            "SD",
+            "TN",
+            "ghana",
+            "LY",
+            "KE",
+            "ET",
+            "cameroon",
+            "TZ",
+            "zambia",
+            "botswana",
+            "UG",
+            "GA",
+            "dem._rep._of_the_congo",
+            "rep._of_the_congo",
+            "senegal",
+            "MZ",
+            "NA",
+            "mali",
+            "madagascar",
+            "chad",
+            "zimbabwe",
+            "benin",
+            "RW",
+            "niger",
+            "malawi",
+            "GN",
+            "mauritania",
+            "swaziland",
+            "togo",
+            "eritrea",
+            "lesotho",
+            "burundi",
+            "sierra_leone",
+            "cape_verde",
+            "djibouti",
+            "liberia",
+            "the_gambia",
+//            "GW",
+            "comoros",
+            "central_african_republic",
+            "SO",
+            "burkina_faso",
+            "western_sahara",
+            "GA",
+            "cote_d_ivoire",
+            "GQ",
+            "GN-bissau",
+        ];
+        var americas = [
+            "BR",
+            "CO",
+            "AR",
+            "VE",
+            "PE",
+            "CL",
+            "EC",
+            "bolivia",
+            "paraguay",
+            "uruguay",
+            "GY",
+            "suriname",
+            "french_guiana",
+            "MX",
+            "cuba",
+            "dominican_republic",
+            "GT",
+            "CR",
+            "panama",
+            "SV",
+            "HN",
+            "jamaica",
+            "NI",
+            "haiti",
+            "BS",
+            "belize",
+        ];
+        var europe = [
+            "DE",
+            "FR",
+            "UK",
+            "IT",
+            "ES",
+            "ukraine",
+            "PL",
+            "RO",
+            "neth.",
+            "GR",
+            "BE",
+            "PT",
+            "CZ",
+//            "HU",
+            "hungaria",
+            "BY",
+            "SE",
+            "AT",
+            "switz.",
+            "bulgaria",
+            "denmark",
+//            "finland",
+            "Finland",
+            "NO",
+            "IE",
+            "HR",
+            "BA",
+            "moldova",
+            "LT",
+            "alb.",
+            "SI",
+            "est.",
+            "mont.",
+            "luxembourg",
+            "malta",
+            "iceland",
+            "andorra",
+            "liech",
+            "RU",
+            "GB",
+            "lat.",
+            "slov.",
+            "ser.",
+            "KV",
+        ];
+        var asia = [
+            "armenia",
+            "azerbaijan",
+            "brunei",
+            "burma",
+            "georgia",
+            "IN",
+            "ID",
+            "IR",
+            "AF",
+            "BD",
+            "BT",
+            "KH",
+            "CN",
+            "TL",
+            "IQ",
+            "IL",
+            "JP",
+            "jordan",
+            "kazakhstan",
+            "KP",
+            "KR",
+            "KW",
+            "laos",
+            "lebanon",
+            "MY",
+            "MN",
+            "NP",
+            "OM",
+            "PK",
+//            "papa_new_guinea",
+            "papua_new_guinea",
+            "PH",
+            "QA",
+            "rus.",
+            "SA",
+            "SG",
+            "sri_lanka",
+            "SY",
+            "TH",
+            "TR",
+            "turkmenistan",
+            "united_arab_emirates",
+            "uzbekistan",
+            "VN",
+            "yemen",
+            "tajikstan",
+            "kyrgyzstan",
+            "indian_claim",
+            "AU",
+        ];
+
+        var getParameter = function(name)
+        {
+          name = name.replace(/[\[]/, "\\\[").replace(/[\]]/, "\\\]");
+          var regexS = "[\\?&]" + name + "=([^&#]*)";
+          var regex = new RegExp(regexS);
+          var results = regex.exec(window.location.search);
+          if(results == null)
+            return "";
+          else
+            return decodeURIComponent(results[1].replace(/\+/g, " "));
+        }
+
+        var africaOpacity = getParameter('africa');
+        var americaOpacity = getParameter('america');
+        var europeOpacity = getParameter('europe');
+        var australasiaOpacity = getParameter('australasia');
+        var vals = [africaOpacity*100
+                   ,americaOpacity*100
+                   ,europeOpacity*100
+                   ,australasiaOpacity*100];
+
+        //it's important to add an load event listener to the object, as it will load the svg doc asynchronously
+
+        var pie = Raphael("pie");
+        pie.piechart(320,240,175,vals,{
+colors: ["#1BE050","#E04C1B","#D61BE0","#E67A1C"],
+legend: ["Africa","Americas","Europe","Australasia"],
+        });
+        a.addEventListener("load",function(){
+            var svgDoc = a.contentDocument; //get the inner DOM of alpha.svg
+            for (var i = 0; i < africa.length; i++) {
+                var c = africa[i];
+                var country = svgDoc.getElementById(c);
+                console.log("country: " + country.id);
+                var els = country.getElementsByTagName('path');
+                for (var e = 0; e < els.length; e++) {
+                    els[e].style.fill = "#1BE050";
+                    els[e].style.opacity = africaOpacity;
+                }
+            }
+            for (var i = 0; i < americas.length; i++) {
+                var c = americas[i];
+                var country = svgDoc.getElementById(c);
+                console.log("country: " + country.id);
+                var els = country.getElementsByTagName('path');
+                for (var e = 0; e < els.length; e++) {
+                    els[e].style.fill = "#E04C1B";
+                    els[e].style.opacity = americaOpacity;
+                }
+            }
+            for (var i = 0; i < europe.length; i++) {
+                var c = europe[i];
+                var country = svgDoc.getElementById(c);
+                console.log("country: " + country.id);
+                var els = country.getElementsByTagName('path');
+                for (var e = 0; e < els.length; e++) {
+                    els[e].style.fill = "#D61BE0";
+                    els[e].style.opacity = europeOpacity;
+                }
+            }
+            for (var i = 0; i < asia.length; i++) {
+                var c = asia[i];
+                var country = svgDoc.getElementById(c);
+                console.log("country: " + country.id);
+                var els = country.getElementsByTagName('path');
+                for (var e = 0; e < els.length; e++) {
+                    els[e].style.fill = "#E67A1C";
+                    els[e].style.opacity = australasiaOpacity;
+                }
+            }
+            //var delta = svgDoc.getElementById("iceland"); //get the inner element by id
+            //delta.addEventListener("mousedown",function(){alert('hello world!')},false);    //add behaviour
+        },false);
+    </script>
   </body>
 </html>
+
