--- a/dnamap/index.html
+++ b/dnamap/index.html
@@ -42,7 +42,7 @@ p {
                                    <link rel="shortcut icon" href="ico/favicon.png">
   </head>
 
-  <body>
+  <body data-spy="scroll" data-target=".navbar">
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -69,7 +69,7 @@ p {
             <h1>Your genetic breakdown by region.</h1>
         </div>
         <div class="row-fluid">
-            <a name="map"></a>
+            <a name="map" id="map"></a>
             <div class="span11">
                 <object data="img/worldMap.svg" type="image/svg+xml"
                     style="width: 100%; height: 100%;"
@@ -78,7 +78,7 @@ p {
         </div>
         <hr>
         <div class="row-fluid">
-            <a name="breakdown"></a>
+            <a name="breakdown" id="breakdown"></a>
             <h1>Breakdown</h1>
             <div class="span6 offset3">
                 <div class="chart" id="pie">
@@ -279,6 +279,7 @@ p {
             "kyrgyzstan",
             "indian_claim",
             "AU",
+            "NZ",
         ];
 
         var getParameter = function(name)
