--- a/dnamap/index.html
+++ b/dnamap/index.html
@@ -70,7 +70,7 @@ p {
         </div>
         <div class="row-fluid">
             <a name="map" id="map"></a>
-            <div class="span11">
+            <div class="span11 well chart">
                 <object data="img/worldMap.svg" type="image/svg+xml"
                     style="width: 100%; height: 100%;"
                     id="earth"></object>
@@ -80,8 +80,12 @@ p {
         <div class="row-fluid">
             <a name="breakdown" id="breakdown"></a>
             <h1>Breakdown</h1>
-            <div class="span6 offset3">
+            <div class="span6">
                 <div class="chart" id="pie">
+                </div>
+            </div>
+            <div class="span5">
+                <div class="chart" id="bar">
                 </div>
             </div>
         </div>
@@ -310,6 +314,10 @@ p {
 colors: ["#1BE050","#E04C1B","#D61BE0","#E67A1C"],
 legend: ["Africa","Americas","Europe","Australasia"],
         });
+        var bar = Raphael("bar");
+        bar.barchart(50,30,450,400,vals,{
+colors: ["#1BE050","#E04C1B","#D61BE0","#E67A1C"],
+});
         a.addEventListener("load",function(){
             var svgDoc = a.contentDocument; //get the inner DOM of alpha.svg
             for (var i = 0; i < africa.length; i++) {
