--- a/dnamap/index.html
+++ b/dnamap/index.html
@@ -26,6 +26,33 @@ p {
     text-align: left;
     margin: .5em 2em;
 }
+              /* Wrapper for page content to push down footer */
+      #wrap {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by it's height */
+        margin: 0 auto -60px;
+      }
+
+      /* Set the fixed height of the footer here */
+      #push,
+      #footer {
+        height: 60px;
+      }
+      #footer {
+        background-color: #f5f5f5;
+      }
+
+      /* Lastly, apply responsive CSS fixes as necessary */
+      @media (max-width: 767px) {
+        #footer {
+          margin-left: -20px;
+          margin-right: -20px;
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+      }
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
 
@@ -65,33 +92,44 @@ p {
 
     <div class="container-fluid">
 
-        <div class="row-fluid" style="margin-top: 5px;">
+        <div class="page-header row-fluid" style="margin-top: 5px;">
             <h1>
-                Your genetic breakdown by region.
+                Regional choropleth
             </h1>
+            <p class="lead">Transparency indicates relative influence.</p>
         </div>
         <div class="row-fluid">
             <a name="map" id="map"></a>
-            <div class="span11 well chart">
+            <div class="span11 chart">
                 <object data="img/worldMap.svg" type="image/svg+xml"
                     style="width: 100%; height: 100%;"
                     id="earth"></object>
             </div>
         </div>
-        <hr>
-        <div class="row-fluid">
+        <div class="page-header row-fluid">
             <a name="breakdown" id="breakdown"></a>
             <h1>Breakdown</h1>
+            <p class="lead">Hover for more information.</p>
+        </div>
+        <div class="row-fluid">
             <div class="span6">
                 <div class="chart" id="pie">
                 </div>
             </div>
-            <div class="span5">
+            <div class="span6">
                 <div class="chart" id="bar">
                 </div>
             </div>
         </div>
-        <div class="push"></div>
+        <hr>
+        <div id="footer">
+            <div class="container-fluid">
+                <p class="muted credit">Created by <a
+                    href="http://invexi.com">Invexi</a> and <a
+                    href="http://niltag.net">Gatlin Johnson</a>.</p>
+            </div>
+        </div>
+    </div>
 
     </div> <!-- /container -->
 
