--- a/dnamap/map2.html
+++ b/dnamap/map2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -26,34 +25,7 @@ p {
     text-align: left;
     margin: .5em 2em;
 }
-              /* Wrapper for page content to push down footer */
-      #wrap {
-        min-height: 100%;
-        height: auto !important;
-        height: 100%;
-        /* Negative indent footer by it's height */
-        margin: 0 auto -60px;
-      }
-
-      /* Set the fixed height of the footer here */
-      #push,
-      #footer {
-        height: 60px;
-      }
-      #footer {
-        background-color: #f5f5f5;
-      }
-
-      /* Lastly, apply responsive CSS fixes as necessary */
-      @media (max-width: 767px) {
-        #footer {
-          margin-left: -20px;
-          margin-right: -20px;
-          padding-left: 20px;
-          padding-right: 20px;
-        }
-      }
-    </style>
+</style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -69,84 +41,13 @@ p {
                                    <link rel="shortcut icon" href="ico/favicon.png">
   </head>
 
-  <body data-spy="scroll" data-target=".navbar">
-
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">DNA Map</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="#map">Heatmap</a></li>
-              <li><a href="#lineage">Lineage</a></li>
-              <li><a href="#breakdown">Breakdown</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
-
-    <div class="container-fluid">
-
-        <div class="page-header row-fluid" style="margin-top: 5px;">
-            <h1>
-                Regional choropleth
-            </h1>
-            <p class="lead">Transparency indicates relative influence.</p>
-        </div>
-        <div class="row-fluid">
-            <a name="map" id="map"></a>
+  <body>
             <div class="span11 chart">
                 <object data="img/worldMap.svg" type="image/svg+xml"
                     style="width: 100%; height: 100%;"
                     id="earth"></object>
             </div>
-        </div>
-        <a name="lineage" id="lineage"></a>
-        <div class="page-header row-fluid" style="margin-top: 5px;">
-            <h1>
-                Worldwide lineage breakdowns.
-            </h1>
-            <p class="lead">How you compare to the rest of the world</p>
-        </div>
-        <div class="row-fluid">
-            <div class="span11 chart">
-                <object data="img/worldMap.svg" type="image/svg+xml"
-                    style="width: 100%; height: 100%;"
-                    id="lineageMap"></object>
-            </div>
-        </div>
-        <a name="breakdown" id="breakdown"></a>
-        <div class="page-header row-fluid">
-            <h1>Breakdown</h1>
-            <p class="lead">Hover for more information.</p>
-        </div>
-        <div class="row-fluid">
-            <div class="span6">
-                <div class="chart" id="pie">
-                </div>
-            </div>
-            <div class="span6">
-                <div class="chart" id="bar">
-                </div>
-            </div>
-        </div>
-        <hr>
-        <div id="footer">
-            <div class="container-fluid">
-                <p class="muted credit">Created by <a
-                    href="http://invexi.com">Invexi</a> and <a
-                    href="http://niltag.net">Gatlin Johnson</a>.</p>
-            </div>
-        </div>
-    </div>
-
-    </div> <!-- /container -->
+       
 
     <!-- Le javascript
     ================================================== -->
@@ -159,7 +60,7 @@ p {
     <script src="js/g.bar.js"></script>
     <script type="text/javascript">
         var a = document.getElementById("earth");
-        var b = document.getElementById("lineageMap");
+        //var b = document.getElementById("lineageMap");
         var africa = [
             "ZA",
             "NG",
@@ -242,6 +143,71 @@ p {
             "haiti",
             "BS",
             "belize",
+            "islands",
+            "US_HI",
+            "US_AK",
+            "US_AZ",
+            "US_NM",
+            "US_OK",
+            "US_UT",
+            "US_WY",
+            "US_ID",
+            "US_WA",
+            "US_MT",
+            "US_SD",
+            "US_ND",
+            "US_CO",
+            "US_NE",
+            "US_NV",
+            "West_US_VA",
+            "US_KS",
+            "US_OR",
+            "US_MN",
+            "US_CA",
+            "US_WI",
+            "US_IA",
+            "US_TX",
+            "US_FL",
+            "US_MI",
+            "US_AR",
+            "US_MO",
+            "US_ME",
+            "US_AL",
+            "US_IL",
+            "US_MS",
+            "US_IN",
+            "US_LA",
+            "US_OH",
+            "US_TN",
+            "US_KY",
+            "US_VT",
+            "US_RI",
+            "US_NC",
+            "US_NY",
+            "US_VA",
+            "US_NH",
+            "US_SC",
+            "US_MD",
+            "US_MA",
+            "US_CT",
+            "US_GA",
+            "US_NJ",
+            "US_PA",
+            "US_DE",
+            "US_DE",
+            "CA_PE",
+            "CA_ON",
+            "CA_NB",
+            "CA_NS",
+            "CA_NL",
+            "CA_PQ",
+            "CA_YT",
+            "CA_AB",
+            "CA_SK",
+            "CA_MB",
+            "CA_BC",
+            "CA_NU",
+            "CA_NT",
         ];
         var europe = [
             "DE",
@@ -365,6 +331,7 @@ p {
 
         //it's important to add an load event listener to the object, as it will load the svg doc asynchronously
 
+                   /*
         var pie = Raphael("pie");
         var pc = pie.piechart(320,240,175,vals,{
 colors: ["#1BE050","#E04C1B","#D61BE0","#E67A1C"],
@@ -396,7 +363,8 @@ colors: ["#1BE050","#E04C1B","#D61BE0","#E67A1C"],
         Math.floor(this.bar.value.value) || "0").insertBefore(this);
     },function() {
     this.flag.animate({opacity: 0}, 300, function () {this.remove();});
-});
+    });
+    */
         a.addEventListener("load",function(){
             var svgDoc = a.contentDocument; //get the inner DOM of alpha.svg
             for (var i = 0; i < africa.length; i++) {
@@ -442,15 +410,6 @@ colors: ["#1BE050","#E04C1B","#D61BE0","#E67A1C"],
             //var delta = svgDoc.getElementById("iceland"); //get the inner element by id
             //delta.addEventListener("mousedown",function(){alert('hello world!')},false);    //add behaviour
         },false);
-
-        b.addEventListener("load",function() {
-            var svgDoc = b.contentDocument;
-            var libya = svgDoc.getElementById('LY');
-            console.log(libya);
-            var lp = Raphael(libya);
-            var lpie = lp.piechart(600,0,25,[1,2,3]);
-        },false);
-
     </script>
   </body>
 </html>
